Update main tab bar with replay analyzer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,8 +40,11 @@
         >
           Planner
         </div>
-        <div class="flex items-center h-full px-3 opacity-50 font-nasa">
-          Statistics
+        <div
+          routerLink="/tools/replay-analyzer"
+          class="flex items-center h-full px-3 font-nasa hover:cursor-pointer hover:bg-menu-200"
+        >
+          Replay Analyzer
         </div>
         <div
           routerLink="/tools"
@@ -74,9 +77,10 @@
           Planner
         </div>
         <div
-          class="flex items-center h-full px-2 rounded opacity-50 hover:cursor-pointer hover:bg-menu-200"
+          routerLink="/tools/replay-analyzer"
+          class="flex items-center h-full px-2 rounded hover:cursor-pointer hover:bg-menu-200"
         >
-          Statistics
+          Replay Analyzer
         </div>
         <div
           routerLink="/tools"
