--- a/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
+++ b/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
@@ -11,7 +11,7 @@
           formControlName="leagueName"
           spellcheck="false"
           placeholder="Pokemon Draft League"
-          class="w-full px-4 py-2 text-base text-center rounded-full shadow-md bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
+          class="w-full px-4 py-2 text-symbolColor-main text-center rounded-full shadow-md bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
         />
       </div>
       <div>
@@ -20,7 +20,7 @@
           formControlName="teamName"
           spellcheck="false"
           placeholder="Deimos Deoxys"
-          class="w-full px-4 py-2 text-base text-center placeholder:text-symbolColor-sub rounded-full shadow-md bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
+          class="w-full px-4 py-2 text-symbolColor-main text-center placeholder:text-symbolColor-disabled rounded-full shadow-md bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
         />
       </div>
       <div>
@@ -28,7 +28,7 @@
         <select
           formControlName="format"
           spellcheck="false"
-          class="w-full px-4 py-2 text-base text-center rounded-full shadow-md bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
+          class="w-full px-4 py-2 text-symbolColor-main text-center rounded-full shadow-md bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
         >
           <option value="" disabled selected>Select Format</option>
           <option *ngFor="let format of formats" value="{{ format }}">
@@ -40,7 +40,7 @@
         <label class="block mb-1 font-bold">Ruleset</label>
         <select
           formControlName="ruleset"
-          class="w-full px-4 py-2 text-base text-center rounded-full shadow-md bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
+          class="w-full px-4 py-2 text-symbolColor-main text-center rounded-full shadow-md bg-aTeam-200 focus:outline-none focus:ring-2 focus:ring-aTeam-500 focus:bg-aTeam-100"
         >
           <option value="" disabled selected>Select Ruleset</option>
           <option *ngFor="let ruleset of rulesets" value="{{ ruleset }}">
