--- a/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
@@ -11,7 +11,7 @@
           formControlName="teamName"
           spellcheck="false"
           placeholder="Deimos Deoxys"
-          class="w-full px-4 py-2 text-base placeholder:text-symbolColor-sub text-center rounded-full shadow-md bg-bTeam-200 focus:outline-none focus:ring-2 focus:ring-bTeam-500 focus:bg-bTeam-100"
+          class="w-full px-4 py-2 placeholder:text-symbolColor-disabled text-symbolColor-main text-center rounded-full shadow-md bg-bTeam-200 focus:outline-none focus:ring-2 focus:ring-bTeam-500 focus:bg-bTeam-100"
         />
       </div>
       <div>
@@ -20,7 +20,7 @@
           placeholder="Week 1"
           spellcheck="false"
           formControlName="stage"
-          class="w-full px-4 py-2 text-base placeholder:text-symbolColor-sub text-center rounded-full shadow-md bg-bTeam-200 focus:outline-none focus:ring-2 focus:ring-bTeam-500 focus:bg-bTeam-100"
+          class="w-full px-4 py-2 text-symbolColor-main placeholder:text-symbolColor-disabled text-center rounded-full shadow-md bg-bTeam-200 focus:outline-none focus:ring-2 focus:ring-bTeam-500 focus:bg-bTeam-100"
         />
       </div>
     </div>
