--- a/src/app/opponent-overview/opponent-score/opponent-score.component.html
+++ b/src/app/opponent-overview/opponent-score/opponent-score.component.html
@@ -120,7 +120,7 @@
             <div class="p-2 border-2 border-aTeam-200 rounded-xl">
               <div class="flex pb-1">
                 <div
-                  class="grid w-full grid-cols-1 text-sm md:grid-cols-3 gap-x-4 sm:text-base"
+                  class="grid w-full grid-cols-1 text-sm md:grid-cols-3 gap-x-4 sm:text-symbolColor-main"
                 >
                   <div class="flex justify-center space-x-2">
                     <div class="font-semibold">Brought:</div>
@@ -238,7 +238,7 @@
                   Winner
                 </div>
                 <div
-                  class="grid w-full grid-cols-1 text-sm md:grid-cols-3 gap-x-4 sm:text-base"
+                  class="grid w-full grid-cols-1 text-sm md:grid-cols-3 gap-x-4 sm:text-symbolColor-main"
                 >
                   <div class="flex justify-center space-x-2">
                     <div class="font-semibold">Brought:</div>
