--- a/src/app/draft-overview/draft-form/draft-form-edit/draft-form-edit.component.html
+++ b/src/app/draft-overview/draft-form/draft-form-edit/draft-form-edit.component.html
@@ -1,15 +1,17 @@
-<div class="flex items-center space-x-4">
-  <button
-    [routerLink]="'/draft/'"
-    class="p-2 m-3 rounded-lg shadow-md bg-aTeam-300 hover:shadow shadow-aTeam-600"
-  >
-    Cancel
-  </button>
-  <div>
-    <p class="text-3xl font-bold">Edit League</p>
+<div class="p-2 m-2 border-2 bg-aTeam-100 rounded-xl border-aTeam-200">
+  <div class="flex items-center space-x-4">
+    <button
+      [routerLink]="'/draft/'"
+      class="p-2 m-3 rounded-lg shadow-md bg-aTeam-300 hover:shadow shadow-aTeam-600"
+    >
+      Cancel
+    </button>
+    <div>
+      <p class="text-3xl font-bold">Edit League</p>
+    </div>
   </div>
+  <draft-form-core
+    [draftForm]="draftForm"
+    (formSubmitted)="editDraft($event)"
+  ></draft-form-core>
 </div>
-<draft-form-core
-  [draftForm]="draftForm"
-  (formSubmitted)="editDraft($event)"
-></draft-form-core>
