fix percentage float value rounding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,29 +26,29 @@
       <div
         *ngIf="menuDropdown"
         (click)="menuDropdown = false"
-        class="absolute left-0 flex-col block p-2 bg-menu-100 border divide-y rounded-md shadow-md border-menu-200 sm:flex top-full"
+        class="absolute left-0 flex-col block p-2 font-nasa bg-menu-100 border divide-y rounded-md shadow-md border-menu-200 sm:flex top-full"
       >
         <div
           routerLink="/draft"
-          class="flex items-center h-full px-3 font-nasa hover:cursor-pointer hover:bg-menu-200"
+          class="flex items-center h-full px-3 hover:cursor-pointer hover:bg-menu-200"
         >
           Drafts
         </div>
         <div
           routerLink="/planner"
-          class="flex items-center h-full px-3 font-nasa hover:cursor-pointer hover:bg-menu-200"
+          class="flex items-center h-full px-3 hover:cursor-pointer hover:bg-menu-200"
         >
           Planner
         </div>
         <div
           routerLink="/tools/replay-analyzer"
-          class="flex items-center h-full px-3 font-nasa hover:cursor-pointer hover:bg-menu-200"
+          class="flex items-center h-full px-3 hover:cursor-pointer hover:bg-menu-200"
         >
           Replay Analyzer
         </div>
         <div
           routerLink="/tools"
-          class="flex items-center h-full px-2 rounded hover:cursor-pointer hover:bg-menu-200"
+          class="flex items-center h-full px-3 hover:cursor-pointer hover:bg-menu-200"
         >
           Other Tools
         </div>
