--- a/src/app/opponent-overview/opponent-score/opponent-score.component.html
+++ b/src/app/opponent-overview/opponent-score/opponent-score.component.html
@@ -92,7 +92,7 @@
       <div
         class="flex items-center flex-grow p-1 rounded-full shadow-inner max-w-128 h-fit bg-menu-200 text-medium shadow-menu-600"
       >
-        <span class="pl-1">Replay:</span>
+        <span class="pl-1 font-semibold">Replay:</span>
         <input
           spellcheck="false"
           formControlName="replay"
