New sprite set options

--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -38,8 +38,11 @@
           formControlName="spriteSet"
         >
           <option value="home">Pokemon Home</option>
-          <option value="bw">Pokemon Showdown - BW</option>
           <option value="serebii">Serebii</option>
+          <option value="ani">Pokemon Showdown - Animated</option>
+          <option value="sv">Pokemon Showdown - SV</option>
+          <option value="bw">Pokemon Showdown - BW</option>
+          <option value="afd">Pokemon Showdown - AFD</option>
         </select>
       </div>
     </div>
